# CameraCapture

./: CMakeLists.txt
docs/: Linux_Video_Recording_Guide.md
examples/linux/: CMakeLists.txt  README.md  linux_camera_list.cpp  video_recorder.cpp
